Fix home page content alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
-/* @import url("https://basehold.it/25"); /* Use this to get horizontal gridline to see baseline. The value at the end specifies the line-height */
+@import url("https://basehold.it/25"); /* Use this to get horizontal gridline to see baseline. The value at the end specifies the line-height */
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -96,9 +96,23 @@ body {
 }
 
 #home-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+body#home-body section#home-body-content-container {
   display: grid;
-  grid-template-rows: 1.389em 11.111em 1.389em 9.722em 1.389em 2.778em 1.389em 2.778em 1.389em; /* val/18px = em */
+  grid-template-rows: 1.389em 11.111em 1.389em 11.111em 1.389em 2.778em 1.389em 2.778em 1.389em; /* val/18px = em */
   grid-template-columns: 1.389em 1fr 1.389em; /* 25px/18px = 1.389em */
+  text-align: center;
 }
 
 /* Modular Styles
@@ -214,9 +228,11 @@ body {
 }
 
 #home-footer {
-  grid-row: 8 / 9;
-  grid-column: 2 / 3;
-  font-size: 0.778em; /* 14px/18px = 0.778em */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
 }
 
 #about-page #header {
@@ -294,11 +310,7 @@ body {
   - For JavaScript, the selectors will primarily if not exclusively consist of class selectors (.active, .hidden, .featured)
 */
 
-@media screen and (min-width: 16.667em) { /* 300px/18px = 16.667em*/
-  #home {
-    text-align: center;
-  }
-
+@media screen and (min-width: 16.687em) { /* 267px/16px = 16.687em*/
   #navbar {
     display: inline-flex;
     justify-content: center;
@@ -311,7 +323,13 @@ body {
   }
 }
 
-@media screen and (min-width: 29.167em) { /* 525px/18px = 29.167em*/
+@media screen and (min-width: 28.75em) { /* 460px/16px = 28.75em*/
+  body#home-body section#home-body-content-container {
+    grid-template-rows: 1.389em 8.333em 1.389em 11.111em 1.389em 2.778em 1.389em 2.778em 1.389em; /* val/18px = em */
+  }
+}
+
+@media screen and (min-width: 29.188em) { /* 467px/16px = 29.188em*/
   #home-nav-container {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -321,12 +339,18 @@ body {
     grid-column: 2 / 3;
   }
 
-  #home-body {
-    grid-template-rows: 1.389em 11.111em 1.389em 9.722em 1.389em 1.389em 1.389em 1.389em 1.389em; /* val/18px = em */
+  body#home-body section#home-body-content-container {
+    grid-template-rows: 1.389em 8.333em 1.389em 11.111em 1.389em 2.778em 1.389em 2.778em 1.389em; /* val/18px = em */
   }
 }
 
-@media screen and (min-width: 33.333em) { /* 600px/18px = 33.333em*/
+@media screen and (min-width: 31.563em) { /* 505px/16px = 31.563em */
+  body#home-body section#home-body-content-container {
+    grid-template-rows: 1.389em 5.556em 1.389em 11.111em 1.389em 2.778em 1.389em 2.778em 1.389em; /* val/18px = em */
+  }
+}
+
+@media screen and (min-width: 33.375em) { /* 534px/16px = 33.375em*/
   #about-page img {
     margin-left: 0;
     margin-right: 1.389em; /* 25px/18px = 1.389em */
@@ -352,7 +376,7 @@ body {
   }
 }
 
-@media screen and (min-width: 38.889em) { /* 700px/18px = 38.889em*/
+@media screen and (min-width: 38.938em) { /* 623px/16px = 38.938em*/
   #navbar {
     margin: 0 auto;
   }
@@ -393,7 +417,7 @@ body {
   }
 }
 
-@media screen and (min-width: 47.333em) { /* 852px/18px = 47.333em*/
+@media screen and (min-width: 47.375em) { /* 758px/16px = 47.375em*/
   #home-nav li {
     display: inline-block;
   }
@@ -403,12 +427,12 @@ body {
     justify-content: center;
   }
 
-  #home-body {
-    grid-template-rows: 1.389em 11.111em 1.389em 2.778em 1.389em 1.389em 1.389em 1.389em 1.389em; /* val/18px = em */
+  body#home-body section#home-body-content-container {
+    grid-template-rows: 1.389em 5.556em 1.389em 2.778em 1.389em 1.389em 1.389em 1.389em 1.389em; /* val/18px = em */
   }
 }
 
-@media screen and (min-width: 60em) { /* 1080px/18px = 60em*/
+@media screen and (min-width: 60em) { /* 960px/16px = 60em*/
   body {
     grid-template-columns: 20% 1fr 20%;
   }
